pushing up a QA fix for the close icon to not overlap text in Gen Horizontal Tabs scss file and adding pos relative to search bar so the clear icon doesn't go outside of parent width.

--- a/app/components/modules/GeneralHorizontalTabs/_generalHorizontalTabs.scss
+++ b/app/components/modules/GeneralHorizontalTabs/_generalHorizontalTabs.scss
@@ -161,6 +161,9 @@
             transition: opacity 0.3s ease-in-out;
             pointer-events: none;
             @include transition;
+            @include media-breakpoint-up(lg) {
+                max-width: 25rem;
+            }
             P {
                 @extend .b3;
             }
@@ -194,7 +197,7 @@
                 color: $grayscale-1;
                 background-color: $brand-blue;
                 border: 1rem;
-                padding: 1rem;
+                padding: 1rem 2.5rem 1rem 1rem;
                 width: 100%;
                 border-top-left-radius: 25px;
                 border-top-right-radius: 25px;
